--- a/tipos_de_selectores.html
+++ b/tipos_de_selectores.html
@@ -1,10 +1,10 @@
-<!--Selectores basicos:es la minima expresion css para colocar estilos.
+Selectores basicos:es la minima expresion css para colocar estilos.
 de tipo:  div {...}
 de clase:  .elemento {...}
 de id:  #id-del-elemento {...}
 de atributo:  div a[href="..."] {...}
 universal:  * {...}
-selector de tipo: selecciona todos los elementos que coincidan con el nombre de la etiqueta html. -->
+selector de tipo: selecciona todos los elementos que coincidan con el nombre de la etiqueta html. 
 
 
 <!DOCTYPE html>
@@ -38,3 +38,5 @@ selector de tipo: selecciona todos los elementos que coincidan con el nombre de 
     <a href="https://platzi.com/home">platzi</a>
 </body>
 </html>
+
+  
